# ytdl-python

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
ytdl_gui/: __init__.py  __main__.py  controller.py  download_video.py  window.py
ytdl_gui/assets/css/: style.css
ytdl_gui/assets/js/: hidden.js  materialize-postprocess.js  submit.js
ytdl_gui/views/: finished.html  head.html  index.html
