[metadata]
name = ytdl-gui
version = 1.0.0
description = YouTube Downloader as a GUI
author = Aakodal
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Aakodal/ytdl-python
license = MIT
classifiers =
  Environment :: No Input/Output (Daemon)
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only

[options]
packages = ytdl_gui
install_requires =
  bottle
  PyQt5

[options.package_data]
* = assets/*, assets/**/*, views/*
